2011-10-03  Pierre Rossi  <pierre.rossi@gmail.com>

        [Qt] Build fix: Qt::escape is deprecated in Qt5
        https://bugs.webkit.org/show_bug.cgi?id=69162

        Use QString::toHtmlEscaped in the Qt5 case.

        Reviewed by Andreas Kling.

        * JavaScriptCore.pri:
        * wtf/qt/UtilsQt.h: Added.
        (escapeHtml):
        * wtf/wtf.pri:

2011-10-03  Balazs Kelemen  <kbalazs@webkit.org>

        libdispatch based ParallelJobs is not enough parallel
        https://bugs.webkit.org/show_bug.cgi?id=66378

        Reviewed by Zoltan Herczeg.

        Use the appropriate libdispatch API for our use case.
        Throw away the hard coded limit of parallel threads
        and use dispatch_apply with the default priority normal
        queue istead of using our own custom serial queue (which
        was a misuse of the API). Enabling PARALLEL_JOBS is now
        a 60% win (2.63x as fast) on the methanol benchmark
        (https://gitorious.org/methanol) with an SVG centric test set
        while the old implementation was almost identical (less than 5% win).

        * wtf/ParallelJobsLibdispatch.h:
        (WTF::ParallelEnvironment::ParallelEnvironment):
        (WTF::ParallelEnvironment::execute):

2011-10-02  Zoltan Herczeg  <zherczeg@webkit.org>

        [Qt]REGRESSION(r95912): It made sputnik tests flakey
        https://bugs.webkit.org/show_bug.cgi?id=68990

        Reviewed by Geoffrey Garen.

        Changing signed char to int in r96354 solved the
        problem. However transitionCount still returns
        with a signed char and should be changed to int.

        * runtime/Structure.h:
        (JSC::Structure::transitionCount):

2011-10-02  Filip Pizlo  <fpizlo@apple.com>

        DFG misses some obvious opportunities for common subexpression elimination
        https://bugs.webkit.org/show_bug.cgi?id=69233

        Reviewed by Oliver Hunt.
        
        0.7% speed-up on SunSpider.

        * dfg/DFGPropagator.cpp: